--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -3256,7 +3256,7 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation11": {
- 	 	 	"trans": "사이버-키티",
+ 	 	 	"trans": "이세계-냥이",
  	 	 	"eng": "CyberKitty"
  	 	},
  	 	"moderator": {
@@ -3644,7 +3644,7 @@
  	 	"donation11": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"사이버-키티\"기부 제목",
+ 	 	 	 	 	"trans": "\"이세계-냥이\"후원 타이틀",
  	 	 	 	 	"eng": "\"CyberKitty\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
@@ -3652,11 +3652,11 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "키티 채팅 프레임 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "아기고양이 채팅 프레임 (애니메이션 포함)",
  	 	 	 	 	"eng": "Kitty chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
- 	 	 	 	 	"trans": "키티 프레임 프로필 (애니메이션 포함)",
+ 	 	 	 	 	"trans": "아기고양이 프레임 프로필 (애니메이션 포함)",
  	 	 	 	 	"eng": "Kitty Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
@@ -3676,7 +3676,7 @@
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정",
+ 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정이다냐옹 >:3",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
