nuove revisioni. Riprendi da 5022

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -2612,7 +2612,7 @@
  	 	},
  	 	"stunEvade": {
  	 	 	"name": {
- 	 	 	 	"trans": "Evasione stordimento",
+ 	 	 	 	"trans": "Evita stordimento",
  	 	 	 	"eng": "Stun evade"
  	 	 	},
  	 	 	"description": {
@@ -4296,11 +4296,11 @@
  	 	},
  	 	"upgradeNoBreak": {
  	 	 	"name": {
- 	 	 	 	"trans": "Nanobot per la Sicurezza della Calibrazione", //di Calibrazione Sicura
+ 	 	 	 	"trans": "Nanobot di Calibrazione Sicura",
  	 	 	 	"eng": "Calibration Safety Nano Bots"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Nanobot sperimentali progettate per ridurre o negare l'effetto distruttivo quando si fallisce una calibrazione. \r\n         Quando è attivato, tutti i fallimenti di calibrazione non distruggeranno l'oggetto per 5 minuti (si applica a tutti i giocatori).",
+ 	 	 	 	"trans": "Nanobot sperimentali progettati per ridurre o negare l'effetto distruttivo quando si fallisce una calibrazione. \r\n         Quando è attivato, tutti i fallimenti di calibrazione non distruggeranno l'oggetto per 5 minuti (si applica a tutti i giocatori).",
  	 	 	 	"eng": "Experimental nano machines designed to reduces and negate the destructive effect when failing calibration, \r\n        when this is activated, all calibration fails will not destroy the item for 5 minutes (Applies to all players)"
  	 	 	}
  	 	},
@@ -4350,7 +4350,7 @@
  	 	 	 	"eng": "Autonomous Storage Unit"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un bot militare progettato per trasportare le tue attrezzature che ti segue autonomamente. \r\n         Con le sue sei forti gambe che imitano il movimento di un ragno e con un'IA avanzata a bordo, \r\n         può seguirti rapidamente e silenziosamente mentre evita di intralciare qualsiasi missione che stai eseguendo.", //per trasportare equipaggiamenti che ti segue... intralciarti durante le missioni.
+ 	 	 	 	"trans": "Un bot militare progettato per trasportare equipaggiamenti che ti segue autonomamente. \r\n         Con le sue sei forti gambe che imitano il movimento di un ragno e con un'IA avanzata a bordo, \r\n         può seguirti rapidamente e silenziosamente mentre evita di intralciarti durante le missioni.",
  	 	 	 	"eng": "An military used bot designed to carry your equipments and follows you autonomously,\r\n        with it's six strong legs that imitates the movement of spiders and a advance onboard AI, \r\n        it can follow you swiftly and quietly while it avoids get in the way of whatever mission you are performing"
  	 	 	}
  	 	},
@@ -4390,7 +4390,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Ottieni un po' di amore, e ottieni un po' di amore! Tutti ricevono un po' di amore!\r\n         Quando attivo tutti si amano gli uni con gli altri.\r\n         Influisce su tutti i giocatori per 10 minuti.", //Dai un po' d'amore, ricevi un po' d'amore, tutti meritano un po' d'amore!
+ 	 	 	 	"trans": "Dai un po' d'amore, ricevi un po' d'amore, tutti meritano un po' d'amore!\r\n         Quando attivo tutti si amano gli uni con gli altri.\r\n         Influisce su tutti i giocatori per 10 minuti.",
  	 	 	 	"eng": "You get some love, and you get some love! everyone gets some love!.\r\n        When used everyone loves each other\r\n        This effects all players fow 10 minutes"
  	 	 	}
  	 	},
@@ -4420,7 +4420,7 @@
  	 	 	 	"eng": "CyberTunnel VPN"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Preoccupato che Il Grande Fratello ti spii mentre navighi nello cyberspazio?\r\n         I tuoi interfoni vengono sempre violati da attacchi malevoli? \r\n         Usa Cybertunnel VPN per proteggere e crittografare la tua esperienza di netrunning! \r\n        \r\n         Una volta attivato, ignora qualsiasi exploit di chat per 1 ora.",
+ 	 	 	 	"trans": "Preoccupato che Il Grande Fratello ti spii mentre navighi nel cyberspazio?\r\n         I tuoi interfoni vengono sempre violati da attacchi malevoli? \r\n         Usa Cybertunnel VPN per proteggere e crittografare la tua esperienza di netrunning! \r\n        \r\n         Una volta attivato, ignora qualsiasi exploit di chat per 1 ora.",
  	 	 	 	"eng": "Worried the Big Brother spying on you while you browse the cyberspace?\r\n        your intercoms always get hacked by malicious attacks? \r\n        use CyberTunnel VPN to protect and encrypt your netrunning experience! \r\n        \r\n        Once activated, ignores any chat exploit for 1 hour"
  	 	 	}
  	 	},
@@ -4456,20 +4456,20 @@
  	 	 	 	 	"maxStack",
  	 	 	 	 	"time"
  	 	 	 	],
- 	 	 	 	"trans": "Un frammento che contiene exploit avanzati progettati per aumentare la probabilità di drop casuale di equipaggiamento d'alto livello. Aumenta la probabilità di drop di equipaggiamento Leggendario (${legendaryChance}%) ed Epico (${epicChance}%) quando sblocchi Contenitori Leggendari (non accumulabile) per ${time} minuto/i (si applica a tutti i giocatori). *IMPORTANTE: il buff si applica solo se il processo di sblocco viene avviato mentre il buff è attivo*.", //si applica solo se attivato prima dello sblocco.
+ 	 	 	 	"trans": "Un frammento che contiene exploit avanzati progettati per aumentare la probabilità di drop casuale di equipaggiamento d'alto livello. Aumenta la probabilità di drop di equipaggiamento Leggendario (${legendaryChance}%) ed Epico (${epicChance}%) quando sblocchi Contenitori Leggendari (non accumulabile) per ${time} minuto/i (si applica a tutti i giocatori). *IMPORTANTE: il buff si applica solo se attivato prima dello sblocco*.",
  	 	 	 	"eng": "A shard that contains advance exploits designed to increase random drop chance of high tier items. Gains additional drop chance of Legendary (${legendaryChance}%) and Epic (${epicChance}%) items when unlocking Legendary containers (Not stackable) for ${time} minute (Applies to all players). *IMPORTANT: The buff will only apply when the unlocking process is started while the buff is active*."
  	 	 	}
  	 	},
  	 	"flashGrenade": {
  	 	 	"name": {
- 	 	 	 	"trans": "Granata Flash", //Granata Accecante/Stordente
+ 	 	 	 	"trans": "Granata Accecante",
  	 	 	 	"eng": "Flash Grenade"
  	 	 	},
  	 	 	"description": {
  	 	 	 	"vars": [
  	 	 	 	 	"escape"
  	 	 	 	],
- 	 	 	 	"trans": "Una granata flash che può essere utilizzata per accecare i nemici, aumentando la tua probabilità di fuga del ${escape}%.",
+ 	 	 	 	"trans": "Una granata accecante che può essere utilizzata per accecare i nemici, aumentando la tua probabilità di fuga del ${escape}%.",
  	 	 	 	"eng": "A flash grenade that can be used to blind enemies. increasing your chance of escape by ${escape}%"
  	 	 	}
  	 	},
@@ -4510,7 +4510,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "Un frammento che contiene la memoria e l'esperienza di qualcuno. Se usato puoi guadagnare ${levelName} esperienza.", //livelli d'esperienza(?)
+ 	 	 	 	"trans": "Un frammento che contiene la memoria e l'esperienza di qualcuno. Se usato puoi guadagnare ${levelName} punti esperienza.",
  	 	 	 	"eng": "A shard that contains someone's memory and experience. If used you may gain ${levelName} experience from this"
  	 	 	}
  	 	},
@@ -4527,7 +4527,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "Un frammento di chiave usato per creare una chiave segreta. \r\n                                 È possibile i tre frammenti richiesti in ciascun dungeon (sia Normale che Sfida). \r\n                                 Ottenuti tutti e tre i frammenti, è possibile utilizzare il Terminale per creare una chiave e sbloccare ${segmentDisplayName}.",
+ 	 	 	 	"trans": "Un frammento di chiave usato per creare una chiave segreta. \r\n                                 È possibile ottenere i tre frammenti richiesti in ciascun dungeon (sia Normale che Sfida). \r\n                                 Ottenuti tutti e tre i frammenti, è possibile utilizzare il Terminale per creare una chiave e sbloccare ${segmentDisplayName}.",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -4558,7 +4558,7 @@
  	 	},
  	 	"print": {
  	 	 	"name": {
- 	 	 	 	"trans": "grado di stampa", 
+ 	 	 	 	"trans": "Grado di stampa", 
  	 	 	 	"eng": "printing rank"
  	 	 	}
  	 	},
@@ -4570,19 +4570,19 @@
  	 	},
  	 	"ammo": {
  	 	 	"name": {
- 	 	 	 	"trans": "Creazione di munizioni", //fabbricazione munizioni
+ 	 	 	 	"trans": "Fabbricazione munizioni",
  	 	 	 	"eng": "ammo crafting"
  	 	 	}
  	 	},
  	 	"scavenge": {
  	 	 	"name": {
- 	 	 	 	"trans": "Abilità di Ricerca", //di Esplorazione
+ 	 	 	 	"trans": "Abilità di esplorazione",
  	 	 	 	"eng": "scavenge skill"
  	 	 	}
  	 	},
  	 	"mining": {
  	 	 	"name": {
- 	 	 	 	"trans": "abilità di Estrazione",
+ 	 	 	 	"trans": "Abilità di estrazione",
  	 	 	 	"eng": "mining skill"
  	 	 	}
  	 	}
@@ -4594,16 +4594,16 @@
  	 	 	 	"eng": "Shangri-La City center"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[Hub centrale] \r\n         Una delle città più trafficate del continente. Qui puoi trovare tutti i tipi di persone da tutto il mondo.", //più popolate... puoi trovare gente proveniente da
+ 	 	 	 	"trans": "[Hub centrale] \r\n         Una delle città più popolate del continente. Qui puoi trovare gente proveviente da tutto il mondo.",
  	 	 	 	"eng": "[Central Hub]\r\n        One of the busiest cities in the continent. Here you can find all sorts of people from around the globe."
  	 	 	},
  	 	 	"toStation": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Vai alla Stazione Centrale dell'Hyper Treno", //Stazione Centrale dell'Ipertreno
+ 	 	 	 	 	"trans": "Vai alla Stazione Centrale dell'Ipertreno",
  	 	 	 	 	"eng": "Go to Hyper Train Central Station"
  	 	 	 	},
  	 	 	 	"tut": {
- 	 	 	 	 	"trans": "Inizia la tua avventura per un bottino epico", //La tua avventura per un bottino epico inizia da qui
+ 	 	 	 	 	"trans": "La tua avventura per un bottino epico inizia da qui",
  	 	 	 	 	"eng": "Start your adventure for epic loot here"
  	 	 	 	}
  	 	 	},
@@ -4656,7 +4656,7 @@
  	 	 	 	"eng": "Shangri-La Market Street"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[Mercato dei giocatori] \r\n         La famosa via del mercato di Shangri-La. Un sacco di bancarelle riempiono la strada.",
+ 	 	 	 	"trans": "[Mercato dei giocatori] \r\n         La famosa Via del Mercato di Shangri-La. Un sacco di bancarelle riempiono la strada.",
  	 	 	 	"eng": "[Player Market]\r\n        The famous market street in Shangri-La. Loads of market stalls fill the street."
  	 	 	},
  	 	 	"toMainHub": {
@@ -4668,7 +4668,7 @@
  	 	},
  	 	"station": {
  	 	 	"name": {
- 	 	 	 	"trans": "Stazione Centrale dell'Hyper Tren",
+ 	 	 	 	"trans": "Stazione Centrale dell'Ipertreno",
  	 	 	 	"eng": "Hyper Train Central Station"
  	 	 	},
  	 	 	"description": {
@@ -4682,11 +4682,11 @@
  	 	 	 	"eng": "Gang Headquarters"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[Gang] \r\n         Il quartier generale per te e i membri della tua gang per pianificare ed eseguire la prossima operazione.",
+ 	 	 	 	"trans": "[Gang] \r\n         Il quartier generale per te e i membri della tua gang dove pianificare ed eseguire la prossima operazione.",
  	 	 	 	"eng": "[Gang]\r\n        The headquarters for you and your gang members to plan and execute your next operation"
  	 	 	},
  	 	 	"cantEnterError": {
- 	 	 	 	"trans": "Devi unirti a una gang per accedere a quest'area.",
+ 	 	 	 	"trans": "Devi unirti o creare una gang per accedere a quest'area.",
  	 	 	 	"eng": "You need to join a gang to enter this area"
  	 	 	}
  	 	},
@@ -4722,11 +4722,11 @@
  	 	 	},
  	 	 	"toStation": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Torna alla Stazione dell'Hyper Treno",
+ 	 	 	 	 	"trans": "Torna alla Stazione dell'Ipertreno",
  	 	 	 	 	"eng": "back to Hyper Train Station"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Ritorna alla Stazione Centrale dell'Hyper Treno",
+ 	 	 	 	 	"trans": "Ritorna alla Stazione Centrale dell'Ipertreno",
  	 	 	 	 	"eng": "Return to Hyper Train Station"
  	 	 	 	}
  	 	 	}
@@ -4744,12 +4744,12 @@
  	 	 	 	 	"segment",
  	 	 	 	 	"segmentMaxLevel"
  	 	 	 	],
- 	 	 	 	"trans": "Dal livello ${segment} al ${segmentMaxLevel}",
+ 	 	 	 	"trans": "Dal livello ${segment} al livello ${segmentMaxLevel}",
  	 	 	 	"eng": "Level ${segment} to ${segmentMaxLevel}"
  	 	 	},
  	 	 	"locked": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Raccogli tutti e 3 i diversi frammenti di chiave dai dungeon in ognuna delle 3 zone nella stazione precedente, \r\n                     quindi vai al [Terminale] presso il Centro Città [Hub] per creare la chiave necessaria per sbloccare quest'area.",
+ 	 	 	 	 	"trans": "Raccogli i tre frammenti di chiave dai dungeon in ognuna delle zone nella stazione precedente, \r\n                     quindi vai al [Terminale] presso il Centro Città [Hub] per creare la chiave necessaria per sbloccare quest'area.",
  	 	 	 	 	"eng": "Gather all 3 different Key Fragments from Dungeons in each 3 zones in previous station, \r\n                    then go to [Terminal] at City Center [Hub] to brute-force (Craft) the key required to unlock this area"
  	 	 	 	}
  	 	 	},
@@ -4786,14 +4786,14 @@
  	 	"unitExchange": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Vuoi comprare Unità, o usarne di tue?"
+ 	 	 	 	 	"Vuoi comprare Unità, o usarne di tue?" //o usarle?
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Do you want to buy Units, or use your Units?"
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Scambio di Unità di Arasaka",
+ 	 	 	 	"trans": "Scambio Unità di Arasaka",
  	 	 	 	"eng": "Arasaka Unit Exchange"
  	 	 	},
  	 	 	"canAccessError": {
@@ -4801,14 +4801,14 @@
  	 	 	 	"eng": "You need to be at least level 3 to access unit exchange"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Puoi acquistare buff globali qui",
+ 	 	 	 	"trans": "Qui puoi acquistare buff globali",
  	 	 	 	"eng": "You can purchase global buff items here"
  	 	 	}
  	 	},
  	 	"cosmetic": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Ciao! Fai una donazione per ottenere benefici cosmetici e aiutare a supportare giochi Free-to-Win come questo"
+ 	 	 	 	 	"Ciao! Fai una donazione per ottenere cosmetiche e aiutare a supportare giochi Free-to-Win come questo"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -4823,14 +4823,14 @@
  	 	 	 	"eng": "You need to be at least level 3 to access cosmetic merchant"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Se ti piace il gioco, considera di effettuare una donazione :)",
+ 	 	 	 	"trans": "Se ti piace il gioco, considera una donazione :)",
  	 	 	 	"eng": "If you liked the game, please consider donation :)"
  	 	 	}
  	 	},
  	 	"printer": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Stampero qualsiasi cosa tu voglia se hai la cache appropriata!"
+ 	 	 	 	 	"Stamperò qualsiasi cosa tu voglia se hai la cache giusta!"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
@@ -4841,7 +4841,7 @@
  	 	 	 	"eng": "Molecular 3d Printer"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Qui puoi usare la tua cache per stampare nuovo equipaggiamento.",
+ 	 	 	 	"trans": "Qui puoi usare le tue cache per stampare nuovo equipaggiamento.",
  	 	 	 	"eng": "You can use your Cache to print new equipment here"
  	 	 	}
  	 	},
@@ -4873,7 +4873,7 @@
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "Per progredire verso la prossima area, è necessario ottenere frammenti di chiavi segrete dai dungeon, \r\n         e usare il terminale per creare la chiave per la prossima area.",
+ 	 	 	 	"trans": "Per progredire verso la prossima area, è necessario ottenere i frammenti di chiave dai dungeon, \r\n         quindi usare il Terminale per creare la chiave per la prossima area.",
  	 	 	 	"eng": "To progress to the next area, you need to get Secret Key Fragments from dungeons, \r\n        and use the Terminal to Brute Force the key for next area"
  	 	 	},
  	 	 	"canAccessError": {
@@ -4881,7 +4881,7 @@
  	 	 	 	"eng": "You need to be at least level 5 to access terminal"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Il tuo personal computer, anche se è un po' obsoleto, è in grado di portare a termine il lavoro con abbastanza pazienza",
+ 	 	 	 	"trans": "Il tuo PC, anche se un po' obsoleto, è in grado di portare a termine il lavoro con abbastanza pazienza", //con un po' di pazienza
  	 	 	 	"eng": "Your personal computer, although it's a little outdated, it can get the job done with enough patience"
  	 	 	}
  	 	},
@@ -4902,7 +4902,7 @@
  	 	"bank": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Benvenuto. Cosa posso conservare per te?"
+ 	 	 	 	 	"Benvenuto. Cosa posso fare per te?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -4938,7 +4938,7 @@
  	 	"storageMerchant": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Ehi ragazzo, sono Lee. Sai, non devi portarti dietro tutto ciò che possiedi."
+ 	 	 	 	 	"Ehi ragazzo, sono Lee. Sai, non devi portarti tutto nelle tasche"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, I'm Lee, You know, you don't have to carry everything you own in your pockets."
@@ -4949,7 +4949,7 @@
  	 	 	 	"eng": "Lee's Trading Post"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un negozio di commercio a conduzione familiare che permette di commerciare con ciò che hanno raccolto in giro.",
+ 	 	 	 	"trans": "Un negozio di commercio a conduzione familiare che permette di commerciare tutto ciò che hai raccolto in giro.",
  	 	 	 	"eng": "A family run trading shop that lets you trade with what they have found while scavenging"
  	 	 	},
  	 	 	"canAccessError": {
@@ -4960,7 +4960,7 @@
  	 	"blackMarket": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Ehi ragazzo, vuoi farti un po' di soldi veloci?"
+ 	 	 	 	 	"Ehi ragazzo, vuoi farti un po' di soldi facili?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, wanna make some quick bucks?"
@@ -4981,7 +4981,7 @@
  	 	 	 	"eng": "Automatic Recycler"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Riciclatore completamente automatizzato, in grado di riciclare gli oggetti fino a ridurli sotto forma di scarti",
+ 	 	 	 	"trans": "Riciclatore completamente automatizzato, in grado di riciclare gli oggetti fino a ridurli in scarti",
  	 	 	 	"eng": "Fully automated recycler, capable of recycling items to their basic scrap form"
  	 	 	}
  	 	}
@@ -5009,11 +5009,11 @@
  	"action": {
  	 	"increasePrint": {
  	 	 	"name": {
- 	 	 	 	"trans": "Lavora nella Fabbrica di stampa",
+ 	 	 	 	"trans": "Lavora nella fabbrica di stampa",
  	 	 	 	"eng": "work in printing factory"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Migliora il grado di stampa senza sacrificare gli scarti tecnologici, ciò può aiutarti ad aumentare il livello dei tuoi oggetti stampati.",
+ 	 	 	 	"trans": "Migliora il grado di stampa senza sacrificare gli scarti tecnologici, può aiutarti ad aumentare il livello delle tue stampe.",
  	 	 	 	"eng": "Improve Printing Rank without sacrificing tech scrap, this may help to increase the level of your prints."
  	 	 	}
  	 	},
