--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -6326,7 +6326,7 @@
  	 	 	 	"좋은 하루 되세요",
  	 	 	 	"보고싶어",
  	 	 	 	"그리워 얘들아...",
- 	 	 	 	"키야아아아",
+ 	 	 	 	"꺄아아아아악",
  	 	 	 	"행복한 하루 되세요~",
  	 	 	 	"사랑해요~",
  	 	 	 	"안아줘요",
