--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -1228,7 +1228,7 @@
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
- 	 	 	 	"trans": "Clicca per visualizzare i dettagli",
+ 	 	 	 	"trans": "Clicca per mostrare i dettagli",
  	 	 	 	"eng": "Click to view details"
  	 	 	}
  	 	},
@@ -4485,7 +4485,7 @@
  	 	},
  	 	"afkRewardBoost": {
  	 	 	"name": {
- 	 	 	 	"trans": "Frammento di Booster Ricompense",
+ 	 	 	 	"trans": "Frammento di Potenziamento Ricompense",
  	 	 	 	"eng": "Reward Booster Shard"
  	 	 	},
  	 	 	"description": {
@@ -5428,7 +5428,7 @@
  	 	 	"eng": "Calibration Safety Nanobot"
  	 	},
  	 	"afkRewardBoost": {
- 	 	 	"trans": "Incremento Ricompense AFK",
+ 	 	 	"trans": "Potenziamento Ricompense AFK",
  	 	 	"eng": "AFK Reward Boost"
  	 	},
  	 	"pirate": {
@@ -6041,7 +6041,7 @@
  	 	 	 	"eng": "unequip"
  	 	 	},
  	 	 	"viewDetails": {
- 	 	 	 	"trans": "Visualizza dettagli",
+ 	 	 	 	"trans": "Mostra dettagli",
  	 	 	 	"eng": "View Details"
  	 	 	},
  	 	 	"swap": {
@@ -6507,18 +6507,18 @@
  	 	},
  	 	"extendButton": {
  	 	 	"activatedTitle": {
- 	 	 	 	"trans": "Incremento delle ricompense (Attivato)",
+ 	 	 	 	"trans": "Potenziamento Ricompense (Attivato)",
  	 	 	 	"eng": "Reward Boost (Activated)"
  	 	 	},
  	 	 	"notActivatedTitle": {
- 	 	 	 	"trans": "Incremento delle ricompense",
+ 	 	 	 	"trans": "Potenziamento Ricompense",
  	 	 	 	"eng": "Reward Boost"
  	 	 	},
  	 	 	"activatedDescription": {
  	 	 	 	"vars": [
  	 	 	 	 	"itemName"
  	 	 	 	],
- 	 	 	 	"trans": "Boost attivato, è necessario spuntare la casella sottostante per abilitarlo per questa attività",
+ 	 	 	 	"trans": "Potenziamento attivato, è necessario spuntare la casella sottostante per abilitarlo per questa attività",
  	 	 	 	"eng": "Boost activated, you must tick the checkbox below to enable it for this task"
  	 	 	},
  	 	 	"notActivatedDescription": {
@@ -6529,11 +6529,11 @@
  	 	 	 	"eng": "Double the items and exp! while the duration and cost will increase by 4 times"
  	 	 	},
  	 	 	"activate": {
- 	 	 	 	"trans": "Avvia ora",
+ 	 	 	 	"trans": "Potenzia ora",
  	 	 	 	"eng": "Boost now"
  	 	 	},
  	 	 	"enableBoost": {
- 	 	 	 	"trans": "Abilita l'Incremento delle ricompense",
+ 	 	 	 	"trans": "Abilita il potenziamento delle ricompense",
  	 	 	 	"eng": "Enable reward boost"
  	 	 	}
  	 	},
