traduzione tutorial chat e combattimento

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -2272,7 +2272,7 @@
  	 	 	"eng": "back"
  	 	},
  	 	"escape": {
- 	 	 	"trans": "Fuga",
+ 	 	 	"trans": "Fuggi",
  	 	 	"eng": "escape"
  	 	},
  	 	"shield": {
