update french translation

--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -13,7 +13,7 @@
  	 	 	"eng": "Quest"
  	 	},
  	 	"chat": {
- 	 	 	"trans": "Tchat",
+ 	 	 	"trans": "chat",
  	 	 	"eng": "Chat"
  	 	},
  	 	"profile": {
@@ -328,11 +328,11 @@
  	 	 	 	"vars": [
  	 	 	 	 	"minLevel"
  	 	 	 	],
- 	 	 	 	"trans": "Tu dois être au moins niveau ${minLevel} pour envoyer des messages dans le tchat",
+ 	 	 	 	"trans": "Tu dois être au moins niveau ${minLevel} pour envoyer des messages dans le chat",
  	 	 	 	"eng": "You need to be at least level ${minLevel} to send chat messages"
  	 	 	},
  	 	 	"chat": {
- 	 	 	 	"trans": "Tchat",
+ 	 	 	 	"trans": "chat",
  	 	 	 	"eng": "chat"
  	 	 	},
  	 	 	"gang": {
@@ -378,7 +378,7 @@
  	 	},
  	 	"chatPreview": {
  	 	 	"notConnected": {
- 	 	 	 	"trans": "Système de tchat non connecté",
+ 	 	 	 	"trans": "Système de chat non connecté",
  	 	 	 	"eng": "chat system not connected"
  	 	 	}
  	 	},
@@ -477,7 +477,7 @@
  	 	},
  	 	"fab": {
  	 	 	"apps": {
- 	 	 	 	"trans": "Les applications",
+ 	 	 	 	"trans": "Toutes applications",
  	 	 	 	"eng": "All Apps"
  	 	 	},
  	 	 	"dungeonList": {
@@ -501,7 +501,7 @@
  	 	 	 	"eng": "Leaderboard"
  	 	 	},
  	 	 	"tutorial": {
- 	 	 	 	"trans": "Didacticiel",
+ 	 	 	 	"trans": "Tutoriel",
  	 	 	 	"eng": "Tutorial"
  	 	 	},
  	 	 	"settings": {
@@ -603,7 +603,7 @@
  	 	 	 	"eng": "Item Inbox"
  	 	 	},
  	 	 	"crafting": {
- 	 	 	 	"trans": "Artisanat",
+ 	 	 	 	"trans": "Fabrication",
  	 	 	 	"eng": "Crafting"
  	 	 	}
  	 	},
@@ -912,7 +912,7 @@
  	 	 	 	 	"eng": "Permissions"
  	 	 	 	},
  	 	 	 	"transferLeadership": {
- 	 	 	 	 	"trans": "Transférer le Leadership",
+ 	 	 	 	 	"trans": "Transférer le controle",
  	 	 	 	 	"eng": "Transfer Leadership"
  	 	 	 	}
  	 	 	},
@@ -1094,7 +1094,7 @@
  	 	 	},
  	 	 	"stallShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Mon décrochage",
+ 	 	 	 	 	"trans": "Mon stand",
  	 	 	 	 	"eng": "My Stall"
  	 	 	 	}
  	 	 	},
@@ -1292,7 +1292,7 @@
  	 	},
  	 	"tutorial": {
  	 	 	"title": {
- 	 	 	 	"trans": "Didacticiel",
+ 	 	 	 	"trans": "Tutoriel",
  	 	 	 	"eng": "Tutorial"
  	 	 	}
  	 	},
@@ -1380,7 +1380,7 @@
  	 	 	 	 	"eng": "Disable Chat Effect"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Désactiver en cas de latence dans le tchat pendant les skips",
+ 	 	 	 	 	"trans": "Désactiver en cas de latence dans le chat pendant les skips",
  	 	 	 	 	"eng": "Disable if chat tab lags during skips"
  	 	 	 	}
  	 	 	},
@@ -1808,7 +1808,7 @@
  	 	 	 	"eng": "Hide recipes that you can\\'t craft"
  	 	 	},
  	 	 	"title": {
- 	 	 	 	"trans": "Artisanat",
+ 	 	 	 	"trans": "Fabrication",
  	 	 	 	"eng": "Crafting"
  	 	 	}
  	 	},
@@ -2106,7 +2106,7 @@
  	 	 	 	"eng": "Updates"
  	 	 	},
  	 	 	"tutorial": {
- 	 	 	 	"trans": "Didacticiel",
+ 	 	 	 	"trans": "Tutoriel",
  	 	 	 	"eng": "tutorial"
  	 	 	},
  	 	 	"credits": {
@@ -2876,7 +2876,7 @@
  	 	 	 	"eng": "Allies and Friends"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Bienvenue dans CyberCode Online ! \r\n         Se faire des amis avec des personnes en ligne sera très utile pour te permettre de compléter des quêtes coopératives, \r\n         Va et demande aux gens en ligne si tu as des questions :) \r\n         N'oublie pas que si tu spam le tchat, tu seras mis en sourdine par un modérateur.",
+ 	 	 	 	"trans": "Bienvenue dans CyberCode Online ! \r\n         Se faire des amis avec des personnes en ligne sera très utile pour te permettre de compléter des quêtes coopératives, \r\n         Va et demande aux gens en ligne si tu as des questions :) \r\n         N'oublie pas que si tu spam le chat, tu seras mis en sourdine par un modérateur.",
  	 	 	 	"eng": "Welcome to CyberCode Online,\r\n        making friends with people online will be very useful for you to complete co-op quests,\r\n        go ahead ask people online if you have got any questions :)\r\n        Remember, if you spam in the chat, you will be muted by moderators."
  	 	 	}
  	 	},
@@ -3280,7 +3280,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Fenêtre de Tchat de base (aucune animation et couleur spéciale)",
+ 	 	 	 	 	"trans": "Fenêtre de chat de base (aucune animation et couleur spéciale)",
  	 	 	 	 	"eng": "Basic Chat Frame (no animation & no special color)"
  	 	 	 	}
  	 	 	}
@@ -3296,7 +3296,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Fenêtre de Tchat vert (avec animation)",
+ 	 	 	 	 	"trans": "Fenêtre de chat vert (avec animation)",
  	 	 	 	 	"eng": "Green Chat Frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -3316,7 +3316,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Fenêtre de Tchat d'or (avec animation)",
+ 	 	 	 	 	"trans": "Fenêtre de chat d'or (avec animation)",
  	 	 	 	 	"eng": "Gold chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -3356,7 +3356,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Cadre de Tchat violet (avec animation)",
+ 	 	 	 	 	"trans": "Cadre de chat violet (avec animation)",
  	 	 	 	 	"eng": "Purple chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -3404,7 +3404,7 @@
  	 	 	 	 	"eng": "Become a Cybernetic Potato"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "Fenêtre de Tchat Patate Cybernetique (avec animation)",
+ 	 	 	 	 	"trans": "Fenêtre de chat Patate Cybernetique (avec animation)",
  	 	 	 	 	"eng": "Potato chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3452,7 +3452,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Fenêtre de tchat bleu néon (avec animation)",
+ 	 	 	 	 	"trans": "Fenêtre de chat bleu néon (avec animation)",
  	 	 	 	 	"eng": "Blue Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -3492,7 +3492,7 @@
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
- 	 	 	 	 	"trans": "Fenêtre de tchat violet néon (avec animation)",
+ 	 	 	 	 	"trans": "Fenêtre de chat violet néon (avec animation)",
  	 	 	 	 	"eng": "Purple Neon chat frame (with animation)"
  	 	 	 	},
  	 	 	 	"4": {
@@ -4356,7 +4356,7 @@
  	 	},
  	 	"chatExploitPirate": {
  	 	 	"name": {
- 	 	 	 	"trans": "Transmetteur d'exploit de Tchat [PIRATE]",
+ 	 	 	 	"trans": "Transmetteur d'exploit de chat [PIRATE]",
  	 	 	 	"eng": "Chat exploit transmitter [PIRATE]"
  	 	 	},
  	 	 	"description": {
@@ -4366,7 +4366,7 @@
  	 	},
  	 	"chatExploitLeet": {
  	 	 	"name": {
- 	 	 	 	"trans": "Transmetteur d'exploit de Tchat [1337]",
+ 	 	 	 	"trans": "Transmetteur d'exploit de chat [1337]",
  	 	 	 	"eng": "Chat exploit transmitter [1337]"
  	 	 	},
  	 	 	"description": {
@@ -4376,7 +4376,7 @@
  	 	},
  	 	"chatExploitUwU": {
  	 	 	"name": {
- 	 	 	 	"trans": "Transmetteur d'exploit de Tchat [UWU]",
+ 	 	 	 	"trans": "Transmetteur d'exploit de chat [UWU]",
  	 	 	 	"eng": "Chat exploit transmitter [UwU]"
  	 	 	},
  	 	 	"description": {
@@ -4386,7 +4386,7 @@
  	 	},
  	 	"chatExploitLove": {
  	 	 	"name": {
- 	 	 	 	"trans": "Transmetteur d'exploit de Tchat [Amour]",
+ 	 	 	 	"trans": "Transmetteur d'exploit de chat [Amour]",
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
@@ -4869,7 +4869,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Terminale",
+ 	 	 	 	"trans": "Terminal",
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
@@ -4960,7 +4960,7 @@
  	 	"blackMarket": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hey kid, wanna make some quick bucks?"
+ 	 	 	 	 	"Hé gammin, tu veux du fric facile?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, wanna make some quick bucks?"
@@ -5252,7 +5252,7 @@
  	 	 	},
  	 	 	"globalChat": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "Utiliser le tchat global",
+ 	 	 	 	 	"trans": "Utiliser le chat global",
  	 	 	 	 	"eng": "Use global chat"
  	 	 	 	},
  	 	 	 	"description": {
@@ -5432,19 +5432,19 @@
  	 	 	"eng": "AFK Reward Boost"
  	 	},
  	 	"pirate": {
- 	 	 	"trans": "Piratage du Tchat [PIRATE]",
+ 	 	 	"trans": "Piratage du chat [PIRATE]",
  	 	 	"eng": "Chat Exploit [PIRATE]"
  	 	},
  	 	"leet": {
- 	 	 	"trans": "Piratage du Tchat [1337]",
+ 	 	 	"trans": "Piratage du chat [1337]",
  	 	 	"eng": "Chat Exploit [1337]"
  	 	},
  	 	"UwU": {
- 	 	 	"trans": "Piratage du Tchat [UWU]",
+ 	 	 	"trans": "Piratage du chat [UWU]",
  	 	 	"eng": "Chat Exploit [UwU]"
  	 	},
  	 	"love": {
- 	 	 	"trans": "Piratage du Tchat [LOVE]",
+ 	 	 	"trans": "Piratage du chat [LOVE]",
  	 	 	"eng": "Chat Exploit [LOVE]"
  	 	},
  	 	"chatExploitProtect": {
@@ -5507,7 +5507,7 @@
  	},
  	"chatServer": {
  	 	"restarting": {
- 	 	 	"trans": "Le serveur de tchat redémarre pour une mise à jour ...",
+ 	 	 	"trans": "Le serveur de chat redémarre pour une mise à jour ...",
  	 	 	"eng": "Chat Server is restarting for a update..."
  	 	}
  	},
@@ -5601,7 +5601,7 @@
  	 	 	"eng": "Loading Dungeon..."
  	 	},
  	 	"sendInvite": {
- 	 	 	"trans": "Inviter via le Tchat",
+ 	 	 	"trans": "Inviter via le chat",
  	 	 	"eng": "Send Invite To Chat"
  	 	},
  	 	"buttonTut": {
@@ -5998,7 +5998,7 @@
  	 	 	},
  	 	 	"agreeToggle": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Je comprends et je n'enverrai jamais de spam ni n'enfreindrai aucune des règles du tchat",
+ 	 	 	 	 	"trans": "Je comprends et je n'enverrai jamais de spam ni n'enfreindrai aucune des règles du chat",
  	 	 	 	 	"eng": "I understand and I will never spam or break any of the chat rules"
  	 	 	 	}
  	 	 	},
@@ -6168,7 +6168,7 @@
  	 	 	},
  	 	 	"noShowToggle": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Tu peux voir le tutoriel complet dans Profil > Didacticiel",
+ 	 	 	 	 	"trans": "Tu peux voir le tutoriel complet dans Profil > Tutoriel",
  	 	 	 	 	"eng": "You can see the full tutorial at Profile > Tutorial tab"
  	 	 	 	},
  	 	 	 	"label": {
@@ -6203,25 +6203,25 @@
  	"chatExploit": {
  	 	"loveWords": {
  	 	 	"trans": [
- 	 	 	 	"Love you",
- 	 	 	 	"You guys are great",
- 	 	 	 	"You guys are the best",
- 	 	 	 	"love yall",
- 	 	 	 	"You are amazing",
- 	 	 	 	"we are best friend",
- 	 	 	 	"Love you all",
- 	 	 	 	"you are great",
- 	 	 	 	"you the best",
- 	 	 	 	"we are awesome",
- 	 	 	 	"you are awesome",
- 	 	 	 	"have a nice day",
- 	 	 	 	"miss you",
- 	 	 	 	"miss you guys",
+ 	 	 	 	"Je vous aime",
+ 	 	 	 	"Vous êtes geniaux",
+ 	 	 	 	"Vous êtes les meilleurs",
+ 	 	 	 	"Je vous aime tous",
+ 	 	 	 	"Vous êtes incroyables",
+ 	 	 	 	"on est meilleurs amis",
+ 	 	 	 	"Je vous aime tous",
+ 	 	 	 	"tu est genial",
+ 	 	 	 	"tu est le meilleur",
+ 	 	 	 	"on est incroyables",
+ 	 	 	 	"tu est incroyable",
+ 	 	 	 	"bonne journée",
+ 	 	 	 	"tu me manque",
+ 	 	 	 	"mvous me manquez",
  	 	 	 	"KYAAAAAAAAA",
- 	 	 	 	"wish you have nice day",
- 	 	 	 	"I love you",
- 	 	 	 	"can we hug?",
- 	 	 	 	"how much you love me?"
+ 	 	 	 	"je vous souhaite une bonne journée",
+ 	 	 	 	"Je t'aime",
+ 	 	 	 	"Calin?",
+ 	 	 	 	"Combien m'aime-tu?"
  	 	 	],
  	 	 	"eng": [
  	 	 	 	"Love you",
@@ -6263,7 +6263,7 @@
  	 	 	 	"eng": "Gang Tag"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Un diminutif qui sera affiché dans le tchat",
+ 	 	 	 	"trans": "Un diminutif qui sera affiché dans le chat",
  	 	 	 	"eng": "A short tag that will be displayed in chat"
  	 	 	}
  	 	},
@@ -6298,7 +6298,7 @@
  	 	 	"eng": "Enemies and AI Core auto farm will have chance to drop Jack-o-lanterns! you can use these to craft Locked Legendary Containers!"
  	 	},
  	 	"desc3": {
- 	 	 	"trans": "Pendant Halloween, un niveau de don de tchat 'cyber-bat' sera disponible pour un temps limité !",
+ 	 	 	"trans": "Pendant Halloween, un niveau de don de chat 'cyber-bat' sera disponible pour un temps limité !",
  	 	 	"eng": "During Halloween, a time limited cyber-bat chat donation tier will be available!"
  	 	}
  	},
@@ -6507,11 +6507,11 @@
  	 	},
  	 	"extendButton": {
  	 	 	"activatedTitle": {
- 	 	 	 	"trans": "RÉCOMPENDRE BOOD (activé)",
+ 	 	 	 	"trans": "Boost de recompense (activé)",
  	 	 	 	"eng": "Reward Boost (Activated)"
  	 	 	},
  	 	 	"notActivatedTitle": {
- 	 	 	 	"trans": "Récompense Boost",
+ 	 	 	 	"trans": "Boost de recompense",
  	 	 	 	"eng": "Reward Boost"
  	 	 	},
  	 	 	"activatedDescription": {
@@ -6533,7 +6533,7 @@
  	 	 	 	"eng": "Boost now"
  	 	 	},
  	 	 	"enableBoost": {
- 	 	 	 	"trans": "Activer la récompense Boost",
+ 	 	 	 	"trans": "Activer le boost de recompense",
  	 	 	 	"eng": "Enable reward boost"
  	 	 	}
  	 	},
