--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -38,7 +38,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"amount"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${amount} bitcoin serán depositados en la cuenta de tu Pandilla, ésto no podrá revertirse",
+ 	 	 	 	 	"trans": "${amount} bitcoin serán depositados en la cuenta de tu Banda, ésto no podrá revertirse",
  	 	 	 	 	"eng": "${amount} bitcoin will be deposit into your gang account, this cannot be reversed"
  	 	 	 	}
  	 	 	},
