traduzione tutorial equipaggiamento. Inizio traduzione FAQ

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -1038,7 +1038,7 @@
  	 	 	},
  	 	 	"tierSelection": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Rarità",
+ 	 	 	 	 	"trans": "Qualità",
  	 	 	 	 	"eng": "Rarity"
  	 	 	 	}
  	 	 	},
@@ -3863,7 +3863,7 @@
  	 	},
  	 	"upgradeModule": {
  	 	 	"name": {
- 	 	 	 	"trans": "Modulo Aggiornamento",
+ 	 	 	 	"trans": "Modulo Miglioramento",
  	 	 	 	"eng": "upgrade module"
  	 	 	}
  	 	},
@@ -4564,7 +4564,7 @@
  	 	},
  	 	"medical": {
  	 	 	"name": {
- 	 	 	 	"trans": "scienza medica",
+ 	 	 	 	"trans": "Scienza medica",
  	 	 	 	"eng": "medical science"
  	 	 	}
  	 	},
