--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -712,7 +712,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"currentAction"
  	 	 	 	],
- 	 	 	 	"trans": "${currentAction}동안 상자의 잠금을 해제합니다.",
+ 	 	 	 	"trans": "현재 ${currentAction} 중이기 때문에 상자를 열 수 없습니다.",
  	 	 	 	"eng": "You unlock containers while ${currentAction}"
  	 	 	}
  	 	},
@@ -6642,7 +6642,7 @@
  	 	 	 	"eng": "Boost now"
  	 	 	},
  	 	 	"enableBoost": {
- 	 	 	 	"trans": "전리품 향상을 활성화하십시오",
+ 	 	 	 	"trans": "전리품 향상 적용",
  	 	 	 	"eng": "Enable reward boost"
  	 	 	}
  	 	},
