--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -88,7 +88,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"nextUpkeepDate"
  	 	 	 	],
- 	 	 	 	"trans": "Prossima manutenzione: ${nextUpkeepDate}",
+ 	 	 	 	"trans": "Prossimo mantenimento: ${nextUpkeepDate}",
  	 	 	 	"eng": "Next upkeep Date: ${nextUpkeepDate}"
  	 	 	},
  	 	 	"insufficientError": {
