traduzione tutorial gang, inizio skip globale

--- a/contribution/lang/it.json
+++ b/contribution/lang/it.json
@@ -912,7 +912,7 @@
  	 	 	 	 	"eng": "Permissions"
  	 	 	 	},
  	 	 	 	"transferLeadership": {
- 	 	 	 	 	"trans": "Trasferisci il comando",
+ 	 	 	 	 	"trans": "Trasferisci comando",
  	 	 	 	 	"eng": "Transfer Leadership"
  	 	 	 	}
  	 	 	},
@@ -1120,7 +1120,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"points"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${points} Controllo occupazionale",
+ 	 	 	 	 	"trans": "${points} Punti Occupazione",
  	 	 	 	 	"eng": "${points} Occupation Control"
  	 	 	 	}
  	 	 	}
@@ -1577,7 +1577,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"occupationContribution"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${occupationContribution} punti occupazione ",
+ 	 	 	 	 	"trans": "${occupationContribution} punti occupazione",
  	 	 	 	 	"eng": "${occupationContribution} occupation point"
  	 	 	 	},
  	 	 	 	"fund": {
@@ -1596,7 +1596,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"deleteGang": {
- 	 	 	 	"trans": "Elimina la gang",
+ 	 	 	 	"trans": "Elimina gang",
  	 	 	 	"eng": "Delete Gang"
  	 	 	}
  	 	},
@@ -5109,7 +5109,7 @@
  	 	},
  	 	"topClanExclusive": {
  	 	 	"name": {
- 	 	 	 	"trans": "Raccogli il pizzo",
+ 	 	 	 	"trans": "Riscuoti il pizzo",
  	 	 	 	"eng": "Collect Protection Fees"
  	 	 	},
  	 	 	"description": {
